--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>spring</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
