--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <slf4j.version>1.7.2</slf4j.version>
         <spring.version>2.5.6.SEC02</spring.version>
         <servlet-api.version>2.5</servlet-api.version>
+        <joda-time.version>2.1</joda-time.version>
     </properties>
 
     <modules>
@@ -102,6 +103,12 @@
                         <artifactId>log4j</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda-time.version}</version>
             </dependency>
 
             <dependency>
