Integrates Tika as a Document Wrapper

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <module>tool</module>
         <module>pack</module>
         <module>solr</module>
+        <module>tika</module>
     </modules>
 
     <dependencyManagement>
