--- a/solr/pom.xml
+++ b/solr/pom.xml
@@ -30,6 +30,10 @@
             <groupId>uk.ac.ox.oucs.search2</groupId>
             <artifactId>search2-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-kernel-api</artifactId>
+        </dependency>
 
         <!-- Dependencies -->
         <dependency>
