Use tika when solrCell isn't available

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
                 <artifactId>search2-solr</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>search2-tika</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>javax.servlet</groupId>
