--- a/solr/pom.xml
+++ b/solr/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>search2-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>search2-tika</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.sakaiproject.kernel</groupId>
             <artifactId>sakai-kernel-api</artifactId>
         </dependency>
