--- a/pack/pom.xml
+++ b/pack/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>search2-backward-compatibility</artifactId>
+            <artifactId>search2-compatibility</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
