--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <modules>
         <module>api</module>
         <module>impl</module>
-        <module>backward-compatibility</module>
+        <module>compatibility</module>
         <module>tool</module>
         <module>pack</module>
         <module>solr</module>
@@ -67,7 +67,7 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>search2-backward-compatibility</artifactId>
+                <artifactId>search2-compatibility</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
