--- a/solr/pom.xml
+++ b/solr/pom.xml
@@ -15,8 +15,8 @@
     <properties>
         <solr.version>3.6.1</solr.version>
         <httpcomponents.version>4.2.2</httpcomponents.version>
-        <guava.version>13.0.1</guava.version>
-        <commons-io.version>2.0.1</commons-io.version>
+        <commons-io.version>2.4</commons-io.version>
+        <guava.version>14.0-rc1</guava.version>
     </properties>
 
     <dependencies>
